# cv-flow

./: .gitignore  README.md  main.py  pyproject.toml
src/cvflow/: __init__.py  command.py  factories.py  flow.py  graph.py  pattern.py
src/cvflow/backend/: __init__.py  abstract_backend.py  mrmustard_backend.py  mrmustard_utils.py
test/: test_flow.py
tests/: test_flow.py  test_pattern.py
