[project]
name = "cvflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexandre Menard", email = "alexxandre.mnd+dev@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mrmustard>=0.7.0,<0.8.0",
    "networkx>=3.6.1",
    "numpy>=1.23.5,<2.0.0",
    "scipy>=1.17.1",
]

[project.scripts]
cvflow = "cvflow:main"

[tool.uv]
environments = ["sys_platform != 'win32'"]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "furo>=2024.1.29",
    "pytest>=8.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]
